EC2/main.tf
resource "aws_instance" "exam_prod" {
  ami               = var.ami
  instance_type     = var.instance-type
  key_name          = var.key-name
  availability_zone = var.az
  security_groups   = [aws_security_group.allow_tls.id]
  user_data         = file("postgres.sh")

  tags = {
    Name = "exams_prod"
  }
}

resource "aws_default_vpc" "default-vpc" {

  tags = var.vpc_tags
}

resource "aws_security_group" "ec2_security_group" {
  name        = "ec2 security group"
  description = "allow access on ports 80 and 22"
  vpc_id      = aws_default_vpc.default-vpc.id

  ingress {
    description = "http access"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "https access"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ec2-security-group"
  }
}
